--- a/style.css
+++ b/style.css
@@ -108,6 +108,19 @@ h2 {
 	padding: 20px;
 }
 
+.box {
+	position: relative;
+	text-align: center;
+}
+
+.bottom-right {
+	position: absolute;
+	bottom: -520px;
+	right:200px;
+	color:white;
+	font-size: 40px;
+}
+
 .code img {
 	flex-direction: row;
 	width: 1325px;
@@ -116,9 +129,8 @@ h2 {
 	padding: 20px;
  }
 
-
 .row img {
-	flex-direction: row;
+	display: flex;
 	width: 650px;
 	height: 350px;
 	margin-right: 25px;
@@ -126,6 +138,49 @@ h2 {
 	margin-bottom: 20px;
  }
 
+ .column {
+	flex: 50%;
+	padding: 15px;
+	position: relative;
+	text-align: center;
+
+}
+
+.first {
+	position: absolute;
+	bottom: -620px;
+	left:20px;
+	color:white;
+	font-size: 25px;
+	font-weight: bolder;
+}
+
+.second {
+	position: absolute;
+	bottom: -588px;
+	right:170px;
+	color:white;
+	font-size: 25px;
+	font-weight: bolder;
+}
+
+.third {
+	position: absolute;
+	bottom: -920px;
+	left:20px;
+	color:white;
+	font-size: 25px;
+	font-weight: bolder;
+}
+
+.fourth {
+	position: absolute;
+	bottom: -900px;
+	right:170px;
+	color:white;
+	font-size: 25px;
+	font-weight: bolder;
+}
 footer {
 	margin-top: 1px;
 	height: 195px;
