--- a/style.css
+++ b/style.css
@@ -8,187 +8,155 @@ body {
 	background-color: #e1d4c3;
 }
 
-.header {
+header {
 	padding: 50px;
 	font-family:Verdana, Geneva, Tahoma, sans-serif;
 	background-color: #0a1638;
 	color: #ffffff;
-	border-bottom: 15px solid #e3b26f;
-
-}
-
-.header h1 {
-	display: inline-block;
-	font-size: 48px;
-}
-
-
-.header nav {
-	padding-top: 15px;
-	margin-right: 20px;
-	float: right;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-size: 20px;
+
+}
+
+.navbar {
+	display: flex;
+	background-color: #e3b26f;
+		
+}
+
+.navbar a {
+	color: #ffffff;
+	text-decoration: none;
+	font-size: 30px;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	padding: 10px 15px;
+	text-align: center;
+	margin-left: 32px;
+}
+
+.layout {
+	display: flex;
+	flex-wrap: wrap;
 	
 }
 
-
-li {
-  list-style-type: none; 
-  display: inline-block;
-  margin-left: 25px;
-  font-size: 30px;
+.sidebar {
+	flex: 15%;
+  	padding: 20px;
+	border-right: 15px solid #e7af64
 }
-
-
-a {
-	color: #ffffff;
-	text-decoration: none;
-}
-
-main {
-	display: flex;
-	flex-wrap: wrap;
-
-}
-
-aside {
-	margin-left: 10px;
-	padding: 75px;
-	clear: both;
-	float: left;
-	width: 20%;
-	max-height: 100%;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	border-right: 5px solid #e3b26f;
-	text-align: right;
-	color: black;
-}
-
-h2 {
-	font-weight: bolder;
-	font-size: 50px;
-	padding: 60px;
-	flex-wrap: wrap;
-	align-items: flex-end;
-	font-family: Georgia, 'Times New Roman', Times, serif;
-
+	
+.profile img {
+	width: 100%;
+	padding: 20px;
+	height: 350px;
+	
 }
 
 .content {
-	width: 75%;
-	display: block;
-	margin-left: 20px;
+	flex:70%;
+	padding: 10px;
 }
 
-.container {
-	margin-top: 10px;
-	margin-bottom: 15px;
-	margin-right: 50px;
-	padding: 20px;
-	height: 300px;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.about {
+	margin: 15px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	font-size: 20px;
-	color: #ffffff;
-	text-align: left;
+	line-height: 30px;
+	padding: 15px;
 }
 
-.container p {
-	margin-top: 50px;
-	color: black;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.container img {
-	height: 300px;
-	float: left;
-	margin-top: -10px;
-	margin-right: 25px;
-	margin-left: -20px;
-	padding: 20px;
+.projects {
+	margin: 15px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 20px;
+	line-height: 30px;
+	padding: 15px;
 }
 
 .box {
 	position: relative;
 	text-align: center;
+	color:white;
 }
 
-.bottom-right {
+.bottom {
 	position: absolute;
-	bottom: -520px;
-	right:200px;
-	color:white;
-	font-size: 40px;
-}
+	bottom: 25px;
+	right: 60px;
+	font-size: 25px;
+	font-weight: bolder;
+ }
 
 .code img {
-	flex-direction: row;
-	width: 1325px;
-	height: 450px;
-	margin-right: 25px;
-	padding: 20px;
- }
-
-.row img {
-	display: flex;
-	width: 650px;
-	height: 350px;
-	margin-right: 25px;
-	padding: 20px;
-	margin-bottom: 20px;
- }
-
- .column {
-	flex: 50%;
+	height: 400px;
+	width: 100%;
 	padding: 15px;
+	
+ }
+
+.place {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+.text {
 	position: relative;
 	text-align: center;
-
+	color:white;
 }
 
 .first {
 	position: absolute;
-	bottom: -620px;
-	left:20px;
-	color:white;
+	top: 25px;
+	left: 60px;
 	font-size: 25px;
 	font-weight: bolder;
 }
 
 .second {
 	position: absolute;
-	bottom: -588px;
-	right:170px;
-	color:white;
+	top: 25px;
+	right: 60px;
 	font-size: 25px;
 	font-weight: bolder;
 }
 
 .third {
 	position: absolute;
-	bottom: -920px;
-	left:20px;
-	color:white;
+	top: 320px;
+	left: 60px;
 	font-size: 25px;
 	font-weight: bolder;
 }
 
 .fourth {
 	position: absolute;
-	bottom: -900px;
-	right:170px;
-	color:white;
+	top: 315px;
+	right: 60px;
 	font-size: 25px;
 	font-weight: bolder;
 }
-footer {
-	margin-top: 1px;
-	height: 195px;
-	border-top: 15px solid #e3b26f;
-	padding: -10px;
+
+.holder {
+	float: left;
+	width: 50%;
+	padding: 5px;
+}
+ 
+.place img {
+	width: 100%;
+	padding: 15px;
+ }
+
+.footer {
+	padding: 20px;
+	font-family:Verdana, Geneva, Tahoma, sans-serif;
 	background-color: #0a1638;
+	color: #ffffff;
 	
 }
+
 .footer h2 {
 	display: inline-block;
 	font-size: 48px;
@@ -211,14 +179,37 @@ footer {
 	
 }
 
-@media screen and (max-width: 768px) {
-	header,
-	main, 
-	nav,
-	footer {
-		flex-direction: column;
+@media screen and (max-width: 992px) {
+	.layout, .navbar {   
+	  flex-direction: column;
 	}
-	
+	.holder {
+		width:100%;
+	}
+ }
+
+ @media screen and (max-width: 768px) {
+	.layout, .navbar {   
+		flex-direction: column;
+	 }
+	 .holder {
+		width:100%;
+	}
+ }
+
+ @media screen and (max-width: 576px) {
+	.layout, .navbar {   
+		flex-direction: column;
+	 }
+	 .holder {
+		width:100%;
+	}
+	.text {
+		width:100%;
+	}
+	.first {
+		width:100%;
+	}
  }
  
  
